syntax = "proto3";


import "google/protobuf/timestamp.proto";

option csharp_namespace = "TrafficLights.WorkerService.Proto";

service NotificationService{
	rpc ChangeColor (ChangeColorRequest) returns (EmptyReply);
}

message ChangeColorRequest {
	string method = 1;
	int32 id = 2;
	Color color = 3;
	google.protobuf.Timestamp Date = 4;
}
enum Color{
	Red = 0;
	Yellow = 1;
	Green = 2;
}
message EmptyReply {
}

//[DisplayFormat(ApplyFormatInEditMode = true, DataFormatString = "0:yyyy\\MM\\dd HH:mm")]
//public DateTime? Date { get; set; } = DateTime.UtcNow;